# post_telegram_image

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  telegram_script.py
